<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recibkg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="#ede1e1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/rectitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_recipe"
            android:textAlignment="center"
            android:textColor="#b53434"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/ingre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rectitle"
            android:layout_centerHorizontal="true"
            android:text="@string/txtIngredients"
            android:textColor="#ca4444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ing01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ingre"
            android:layout_marginStart="14dp"
            android:text="@string/txtItem1"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/ing02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ing01"
            android:layout_below="@+id/ing01"
            android:text="@string/txtItem2"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/ing03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ing01"
            android:layout_below="@+id/ing02"
            android:text="@string/txtItem3"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/ing04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ing01"
            android:layout_below="@+id/ing03"
            android:text="@string/txtItem4"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/ing05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ing01"
            android:layout_below="@+id/ing04"
            android:text="@string/txtItem5"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/ing06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ing01"
            android:layout_below="@+id/ing05"
            android:text="@string/txtItem6"
            android:textColor="@color/ingcolo" />

        <TextView
            android:id="@+id/deric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:text="@string/txtDirections"
            android:textColor="#ca4444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/derection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="220dp"
            android:text="@string/txtMix"
            android:textAlignment="center"
            android:textColor="@color/ingcolo" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>