<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/appbkg"
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="#69873d"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/apptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/weekapp"
            android:textAlignment="center"
            android:textColor="@color/Apptitle"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/rec_imag_des"
            app:srcCompat="@drawable/book" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="81dp"
            android:layout_height="84dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginEnd="66dp"
            android:contentDescription="@string/ecad_imag_des"
            app:srcCompat="@drawable/download" />

        <Button
            android:id="@+id/btnrecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="41dp"
            android:text="@string/btn1Recipe"
            android:textColor="@color/btnclo" />

        <Button
            android:id="@+id/btnecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/imageView"
            android:layout_marginEnd="73dp"
            android:text="@string/btn2ecard"
            android:textAlignment="center"
            android:textColor="#dd5959" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>