<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".healthy">

    <RelativeLayout
        android:id="@+id/appbkg"
        android:layout_width="368dp"
        android:layout_height="503dp"
        android:background="@color/appbkgcolor"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/viewrecipebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/btnviewrecipe"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtTitle "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/txtTitle"
            android:textAlignment="center"
            android:textColor="@color/recipetitlecolor"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imagerec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/beanandmango" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>