<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ecard">

    <RelativeLayout
        android:id="@+id/ecardbkgclor"
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="#e2ebaf"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btncard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:text="@string/e_card_btn"
            android:textColor="@color/btnclo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/e_ecard_title"
            android:textColor="@color/ecardclor"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="303dp"
            android:layout_height="176dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="133dp"
            android:contentDescription="@string/e_description_ecard"
            app:srcCompat="@drawable/sing" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>